--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,16 @@
     // ToolbarMenu
     <string name="calendar_menu_label_insert">追加</string>
 
+    // ChooseProductMenu
+    <string name="choose_product_label_title">作品一覧</string>
+    <string name="choose_product_label_subtitle">登録するイベントの作品を選択してください</string>
+    <string name="choose_product_label_sort">ソート</string>
+    <string name="choose_product_label_twin">2列表示</string>
+    <string name="choose_product_label_triple">3列表示</string>
+    <string name="choose_product_label_favorite">お気に入り</string>
+    <string name="choose_product_label_register_num">登録件数順</string>
+
+
     // NavigationMenu
     <string name="main_manu_label_calendar">カレンダー</string>
     <string name="main_menu_label_event">イベント</string>
