--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,11 @@
     <string name="add_product_label_input_image_select">画像を選択</string>
 
     // EventRegistetr
-    <string name="event_register_lavel_title">イベント登録</string>
+    <string name="event_register_label_title">イベント登録</string>
+    <string name="event_register_label_live">ライブ・ファンミーティング</string>
+    <string name="event_register_label_bd">BD・DVD・CD発売</string>
+    <string name="event_register_label_broadcast">生放送・ラジオ放送日</string>
+    <string name="event_register_label_other">その他</string>
 
     // NavigationMenu
     <string name="main_manu_label_calendar">カレンダー</string>
